# insurance-data-platform

./: .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt
data_generation/: gerar_dados_sujos.py
pipelines/dags/: ingestao_raw.py
